--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,10 @@
 #thumbnails img {
     display: block;
     margin-bottom: 20px;
-    border: 5px solid #DEDEDE;
+    box-shadow: 3px 3px 3px #DDD;
+}
+
+#horrible-table {
+    box-shadow: 5px 5px 5px #DDD;
 }
 
