--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,15 @@
     box-shadow: 3px 3px 3px #DDD;
 }
 
-#horrible-table {
+table {
     box-shadow: 5px 5px 5px #DDD;
+}
+
+#examples {
+    padding: 50px;
+}
+
+#examples button {
+    padding-right: 5px;
 }
 
